--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>8.0</version>
+			<groupId>jakarta.platform</groupId>
+			<artifactId>jakarta.jakartaee-api</artifactId>
+			<version>8.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>fish.payara.arquillian</groupId>
 			<artifactId>arquillian-payara-server-4-embedded</artifactId>
-			<version>1.0.Beta3</version>
+			<version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>fish.payara.extras</groupId>
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.23.1</version>
+			<version>3.31.1</version>
 		</dependency>
 	</dependencies>
 	<build>
